[autoconf] Bug #363: configure fails to check for IRDP dependencies
2007-05-09 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: (bug #363) Should check for in_pktinfo for IRDP

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* configure.ac: sys/conf.h depends on sys/param.h, at least on
 	  FBSD 6.2.
+	  (bug #363) Should check for in_pktinfo for IRDP
 
 2006-05-27 Paul Jakma <paul.jakma@sun.com>
 
