[bgpd] cleanup, compact and consolidate capability parsing code
2007-07-26  Paul Jakma <paul.jakma@sun.com>

    	* lib/log.c: (mes_lookup) warning about code not being in same-number
    	  array slot should be debug, not warning. E.g. BGP has several
    	  discontigious number spaces, allocating from different parts of a
    	  space is not uncommon (e.g. IANA assigned versus vendor-assigned
    	  code points in some number space).
    	* (general) Clean up and compact capability parsing slightly.
    	  Consolidate validation of length and logging of generic TLV, and
    	  memcpy of capability data, thus removing such from cap specifc
    	  code (not always present or correct).
    	* bgp_open.h: Add structures for the generic capability TLV header
    	  and for the data formats of the various specific capabilities we
    	  support.  Hence remove the badly named, or else misdefined, struct
    	  capability.
    	* bgp_open.c: (bgp_capability_vty_out) Use struct capability_mp_data.
    	  Do the length checks *before* memcpy()'ing based on that length
    	  (stored capability - should have been validated anyway on input,
    	  but..).
    	  (bgp_afi_safi_valid_indices) new function to validate (afi,safi)
    	  which is about to be used as index into arrays, consolidates
    	  several instances of same, at least one of which appeared to be
    	  incomplete..
    	  (bgp_capability_mp) Much condensed.
    	  (bgp_capability_orf_entry) New, process one ORF entry
    	  (bgp_capability_orf) Condensed. Fixed to process all ORF entries.
    	  (bgp_capability_restart) Condensed, and fixed to use a
    	  cap-specific type, rather than abusing capability_mp.
    	  (struct message capcode_str) added to aid generic logging.
    	  (size_t cap_minsizes[]) added to aid generic validation of
    	  capability length field.
    	  (bgp_capability_parse) Generic logging and validation of TLV
    	  consolidated here. Code compacted as much as possible.
    	* bgp_

--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,3 +1,11 @@
+2007-07-26  Paul Jakma <paul.jakma@sun.com>
+
+	* log.c: (mes_lookup) warning about code not being in same-number
+	  array slot should be debug, not warning. E.g. BGP has several
+	  discontigious number spaces, allocating from different parts of a
+	  space is not uncommon (e.g. IANA assigned versus vendor-assigned
+	  code points in some number space).
+	  
 2007-06-01 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* zebra.h: On linux, we seem to need to include <linux/types.h> before
